--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     1. Wyświetl pole 'info' z obiektu 'data', który znajduje się w obiekcie
     'someObject'
   </h3>
-  <p>Wynik: </p>
+  <p>Wynik: {{someObject?.data.info}}</p>
 
   <h3>2. Jeżeli znasz *ngIf zrób to samo z użyciem *ngIf</h3>
   <p>Wynik: </p>
